--- a/Rebulid/main.css
+++ b/Rebulid/main.css
@@ -4,11 +4,13 @@
     border: solid 1px red;
     width: 100%;
     height: 70%;
+    margin: -8px -8px -8px -8px;
+    padding-bottom: 10px;
 }
 
 .head
 {
-    background-color: gray;
+    background-color: lightgray;
     border: solid 1px red;
     width: 70%;
     height: 80px;
@@ -18,8 +20,9 @@
 
 .menu
 {
-    background-color: gray;
-    border: solid 1px red;
+    background-color: lightgray;
+    border: solid 1px blue;
+    color: black;
     width: 70%;
     margin-left: 15%;
     height: 10px;
@@ -27,7 +30,28 @@
     padding-bottom: 1%;
     padding-top: 0%;
 }
-.mid
+.menu a
+{
+    text-decoration: none;
+    color: grey;
+}
+
+.menu a:hover
+{   
+    text-decoration: none;
+   font-weight: bold;
+   color: grey;
+}
+
+.menu a:active
+{
+    color: red;
+    font-weight: bold;
+}
+
+
+
+.content
 {
     background-color: white;
     border: solid 1px red;
