--- a/Rebulid/Exercise Nr 1/main.css
+++ b/Rebulid/Exercise Nr 1/main.css
@@ -1,7 +1,7 @@
 
 .body
 {
-    border: solid 1px red;
+    border: solid 1px #BD3D3A;
     width: 100%;
     height: 70%;
     margin: -8px -8px -8px -8px;
@@ -11,7 +11,7 @@
 .head
 {
     background-color: lightgray;
-    border: solid 1px red;
+    border: solid 1px #BD3D3A;
     width: 70%;
     height: 130px;
     margin-left: 15%;
@@ -21,7 +21,7 @@
 .menu
 {
     background-color: lightgray;
-    border: solid 1px red;
+    border: solid 1px #BD3D3A;
     color: black;
     width: 70%;
     margin-left: 15%;
@@ -45,7 +45,7 @@
 
 .body a:active
 {
-    color: red;
+    color: #BD3D3A;
     font-weight: bold;
 }
 
@@ -54,7 +54,7 @@
 .content
 {
     background-color: white;
-    border: solid 1px red;
+    border: solid 1px #BD3D3A;
     width: 70%;
     margin-left: 15%;
     height: 100%;
@@ -67,6 +67,14 @@
     text-align: left;
     position: absolute;
     left: 15%;
+}
+
+@media screen {
+    .printhead
+    {
+        display: none;
+    }
+    
 }
 
 @media only screen and (max-width: 600px) 
@@ -99,4 +107,38 @@
        text-align: center;
        left: 0%;
     }
+}
+
+@media print 
+{
+    .menu
+    {
+        display: none;
+    }
+    .head
+    {
+        border-color: black;
+        height: 100px;
+    }
+    .head img
+    {
+        display: none;
+
+    }
+    .body
+    {
+        border-color: black;
+    }
+    .body a:active
+    {
+        color: black;
+    }
+
+    .content
+    {
+        border-color: black;
+    }
+    
+
+
 }
