--- a/Rebulid/Exercise Nr 2/main2.css
+++ b/Rebulid/Exercise Nr 2/main2.css
@@ -2,7 +2,7 @@
 {
     border: solid 1px #BD3D3A;
     width: 100%;
-    height: 92%;
+    height: 93%;
     margin: -8px -8px -8px -8px;
     position: absolute;
     top:1%;
@@ -21,8 +21,8 @@
 .columnleft
 {   
     background-color: lightgray;
-    width: 15%;
-    height: 85.4%;
+    width: 14%;
+    height: 85%;
     position: relative;
     float: left;
     border: solid 1px #BD3D3A;
@@ -55,8 +55,10 @@
 }
 
 .content
-{
-    width: 69.4%;
+{   
+    margin-left: 0.1%;
+    margin-right: 0.1%;
+    width: 71%;
     border: solid 1px #BD3D3A;
     position: relative;
     float: left;
@@ -65,9 +67,9 @@
 .columnright
 {   
     background-color: gray;
-    right: 0.1%;
-    width: 15%;
-    height: 70%;
+    margin-right: 0.1%;
+    width: 14%;
+    height: 85%;
     position: relative;
     border: solid 1px #BD3D3A;
     float: right;
